--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,13 @@ wheels/
 *.egg-info
 *.python-version
 
+#API keys and sensitive data
 *.env
 
 # Virtual environments
 .venv
 
+# Folder-specific files
+static/
+
+#Files
